--- a/css/creative.css
+++ b/css/creative.css
@@ -178,7 +178,7 @@ header {
     min-height: auto;
     text-align: center;
     color: #fff;
-    background-image: url(../img/header.jpg);
+    background-image: url(../img/Overhead-2.png);
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -198,6 +198,12 @@ header .header-content .header-content-inner h1 {
     margin-bottom: 0;
     text-transform: uppercase;
     font-weight: 700;
+    color: #f05f40;
+}
+
+header .header-content .header-content-inner h2 {
+    margin-top: 0;
+    margin-bottom: 0;
 }
 
 header .header-content .header-content-inner hr {
@@ -208,7 +214,7 @@ header .header-content .header-content-inner p {
     margin-bottom: 50px;
     font-size: 16px;
     font-weight: 300;
-    color: rgba(255,255,255,.7);
+    color: rgb(255,0,0);
 }
 
 @media(min-width:768px) {
